# file-browser

./: CMakeLists.txt  CMakeLists.txt.user.475f64f  CMakeLists.txt.user.8bcab61  CMakeLists.txt.user.e6235cf  README.md
Header Files/: errorwindow.h  graphwindow.h  gui1.h  querywindow.h  searchengine.h  webpagedisplay.h
Qt UI Files/: errorwindow.ui  graphwindow.ui  gui1.ui  querywindow.ui  webpagedisplay.ui
Sample Folder/: datastructures.txt
Sample Folder/Folder1/: textFold1.txt
Sample Folder/Folder1/Folderin1/: YeehawTextFile.txt
Sample Folder/TechNotes/: aboutgoogle.txt  cameras.txt  laptops.txt  phones.txt
Sample Folder/TechNotes/FuturisticTech/: vr.txt
Sample Text Files/: LALA.txt  TEXT.txt  arti.txt  school.txt  university.txt
Source Files/: errorwindow.cpp  graphwindow.cpp  gui1.cpp  main.cpp  querywindow.cpp  searchengine.cpp  webpagedisplay.cpp
